Rename `lib` folder to `src`

--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
   "middleware": {
     "router": {
       "module": {
-        "arguments": [{ "directory": "path:./lib/controllers" }]
+        "arguments": [{ "directory": "path:./src/controllers" }]
       }
     },
 
