--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "make test",
     "test-ci": "make test-ci",
     "coverage": "make coverage",
-    "build": "babel lib -d dist",
+    "build": "babel src -d dist",
     "serve": "node dist/index.js"
   },
   "dependencies": {
