--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start": "node run.js",
+    "start": "nodemon run.js --delay 1",
     "test": "make test",
     "test-ci": "make test-ci",
     "coverage": "make coverage",
@@ -43,6 +43,7 @@
     "eslint-config-node-style-guide": "3.0.0",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
+    "nodemon": "1.11.0",
     "proxyquire": "1.7.10",
     "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
