--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-cli": "6.22.2",
     "babel-eslint": "7.1.1",
     "babel-plugin-transform-runtime": "6.22.0",
-    "babel-preset-latest": "6.22.0",
+    "babel-preset-env": "1.1.8",
     "babel-register": "6.22.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
