--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@baldercm/curly-guacamole",
   "version": "0.1.0",
   "description": "node.js playground using Babel",
-  "main": "index.js",
+  "main": "src/index.js",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "start": "nodemon run.js",
+    "start": "nodemon src/index.js --exec babel-node",
     "test": "make test",
     "test-ci": "make test-ci",
     "coverage": "make coverage",
@@ -25,18 +25,19 @@
     "moment": "2.17.1",
     "moment-timezone": "0.5.11",
     "mongoose": "4.7.7",
+    "morgan": "1.7.0",
     "numeral": "2.0.4",
     "on-finished": "2.3.0",
     "pine": "1.1.1",
     "request": "2.79.0",
-    "request-promise": "4.1.1"
+    "request-promise": "4.1.1",
+    "winston": "2.3.0"
   },
   "devDependencies": {
     "babel-cli": "6.22.2",
     "babel-eslint": "7.1.1",
     "babel-plugin-transform-runtime": "6.22.0",
     "babel-preset-env": "1.1.8",
-    "babel-register": "6.22.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
     "coveralls": "2.11.15",
