--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "devDependencies": {
     "babel-cli": "6.22.2",
     "babel-eslint": "7.1.1",
+    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-plugin-transform-runtime": "6.22.0",
     "babel-preset-env": "1.1.8",
+    "babel-register": "6.22.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
     "coveralls": "2.11.15",
