--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "babel-cli": "6.22.2",
     "babel-eslint": "7.1.1",
-    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
+    "babel-plugin-istanbul": "3.1.2",
+    "babel-plugin-transform-promise-to-bluebird": "1.1.1",
     "babel-plugin-transform-runtime": "6.22.0",
     "babel-preset-env": "1.1.8",
     "babel-register": "6.22.0",
@@ -44,6 +45,7 @@
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
     "nodemon": "1.11.0",
+    "nyc": "10.1.2",
     "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
     "supertest": "2.0.1"
